<resources>
    <string name="app_name">Mirror Target</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pair">Pair Device</string>
    <string name="settings">Settings</string>
    <string name="status_running">Service Running</string>
    <string name="status_stopped">Service Stopped</string>
    <string name="notification_channel_name">Mirror Target Service</string>
    <string name="notification_channel_description">Background surveillance service</string>
    <string name="notification_title">Mirror Target Active</string>
    <string name="notification_text">Camera, audio, and location monitoring</string>
    <string name="permissions_required">Permissions required for surveillance features</string>
    <string name="permissions_denied">Permissions denied. Cannot start service.</string>
    <string name="battery_optimization_title">Disable Battery Optimization</string>
    <string name="battery_optimization_message">Mirror Target needs to run continuously.</string>
    <string name="open_settings">Open Settings</string>
    <string name="later">Later</string>
    <string name="service_started">Surveillance service started</string>
    <string name="service_stopped">Surveillance service stopped</string>
</resources>
